Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-7297

BUG: spinlock bad magic, probably on oh->oh_lock

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.8.0
    • None
    • Linux kernel 2.6.32-504.16.2.1chaos.ch5.3.x86_64.debug
      Lustre 2.7.54 plus 3 patches, see description
    • 3
    • 9223372036854775807

      After building lustre, attempted to run in-tree on a single node. Ran

      FSTYPE=zfs llmount.sh
      

      mkfs.lustre completed without errors.
      mount produced following output in dmesg:

      Lustre: Lustre: Build Version: v2_7_54_0-g99fd511-CHANGED-2.6.32-504.16.2.1chaos.ch5.3.x86_64.debug
      LNet: Added LNI 192.168.122.12@tcp [8/256/0/180]
      LNet: Accept secure, port 988
      Lustre: Echo OBD driver; http://www.lustre.org/
      zpool used greatest stack depth: 2928 bytes left
      txg_sync used greatest stack depth: 2872 bytes left
      BUG: spinlock bad magic on CPU#0, mount.lustre/4152 (Not tainted)
      lock: ffff88002713a770, .magic: 00000000, .owner: mount.lustre/4152, .owner_cpu: 0
      Pid: 4152, comm: mount.lustre Not tainted 2.6.32-504.16.2.1chaos.ch5.3.x86_64.debug #1
      Call Trace:
      [<ffffffff812c3d2a>] ? spin_bug+0xaa/0x100
      [<ffffffff812c3de5>] ? _raw_spin_unlock+0x65/0xa0
      [<ffffffff81561a4b>] ? _spin_unlock+0x2b/0x40
      [<ffffffffa0a8d32c>] ? lprocfs_oh_tally+0x3c/0x50 [obdclass]
      [<ffffffffa0e54319>] ? record_start_io+0x39/0x90 [osd_zfs]
      [<ffffffffa0e5601d>] ? osd_write+0x1ad/0x3a0 [osd_zfs]
      [<ffffffffa0ab747d>] ? dt_record_write+0x3d/0x130 [obdclass]
      [<ffffffffa0a97895>] ? local_oid_storage_init+0xe55/0x1410 [obdclass]
      [<ffffffffa11226a4>] ? mgs_fs_setup+0xa4/0x4b0 [mgs]
      [<ffffffff8156190b>] ? _read_unlock+0x2b/0x40
      [<ffffffffa1121aaf>] ? mgs_init0+0xeff/0x17c0 [mgs]
      [<ffffffff8118f215>] ? kmem_cache_alloc_trace+0x1c5/0x2e0
      [<ffffffff81545b30>] ? kmemleak_alloc+0x20/0xd0
      [<ffffffffa111a399>] ? mgs_type_start+0x19/0x20 [mgs]
      [<ffffffffa1122480>] ? mgs_device_alloc+0x110/0x1f0 [mgs]
      [<ffffffffa0a9d19f>] ? obd_setup+0x1bf/0x290 [obdclass]
      [<ffffffffa0a9d477>] ? class_setup+0x207/0x870 [obdclass]
      [<ffffffffa0aa4bfc>] ? class_process_config+0x113c/0x2710 [obdclass]
      [<ffffffff8118c983>] ? cache_alloc_debugcheck_after+0xf3/0x230
      [<ffffffff81545b30>] ? kmemleak_alloc+0x20/0xd0
      [<ffffffff8118ffdb>] ? __kmalloc+0x21b/0x330
      [<ffffffffa0aaaf98>] ? do_lcfg+0x198/0x9c0 [obdclass]
      [<ffffffffa0aab422>] ? do_lcfg+0x622/0x9c0 [obdclass]
      [<ffffffffa0aab854>] ? lustre_start_simple+0x94/0x200 [obdclass]
      [<ffffffffa0ae0ae1>] ? server_fill_super+0x1161/0x1690 [obdclass]
      [<ffffffffa0ab0c58>] ? lustre_fill_super+0x5d8/0xa80 [obdclass]
      [<ffffffffa0ab0680>] ? lustre_fill_super+0x0/0xa80 [obdclass]
      [<ffffffff811af06f>] ? get_sb_nodev+0x5f/0xa0
      [<ffffffffa0aa8345>] ? lustre_get_sb+0x25/0x30 [obdclass]
      [<ffffffff811ae61b>] ? vfs_kern_mount+0x7b/0x1b0
      [<ffffffff811ae7c2>] ? do_kern_mount+0x52/0x130
      [<ffffffff811d0b0b>] ? do_mount+0x2fb/0x920
      [<ffffffff811d11c0>] ? sys_mount+0x90/0xe0
      [<ffffffff8100b072>] ? system_call_fastpath+0x16/0x1b
      Lustre: Setting parameter lustre-MDT0000.mdt.identity_upcall in log lustre-MDT0000
      Lustre: ctl-lustre-MDT0000: No data found on store. Initialize space
      Lustre: lustre-MDT0000: new disk, initializing
      mount.lustre used greatest stack depth: 2536 bytes left
      

      Code that triggered the BUG:

      void lprocfs_oh_tally(struct obd_histogram *oh, unsigned int value)
      {
              if (value >= OBD_HIST_MAX)
                      value = OBD_HIST_MAX - 1;
      
              spin_lock(&oh->oh_lock);
              oh->oh_buckets[value]++;
              spin_unlock(&oh->oh_lock);
      }
      

            emoly.liu Emoly Liu
            ofaaland Olaf Faaland
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: